--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,55 +9,60 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # ========================
-      # 1. Checkout & Prep Source
+      # 1. Checkout & Purge OPLUS
       # ========================
-      - name: Checkout Kernel Source
-        uses: actions/checkout@v4
-        with:
-          repository: dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source
-          ref: master
-          path: kernel
-
-      # ========================
-      # 2. Nuclear Removal of OPLUS
-      # ========================
-      - name: Delete OPLUS Components
+      - name: Checkout and Sanitize Source
         run: |
+          # Clone fresh copy (avoid runner caching issues)
+          git clone --depth=1 https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source kernel
           cd kernel
-          # Remove problematic directories
+
+          # Nuclear removal of OPLUS components
           rm -rf arch/arm64/kernel/rootguard
+          rm -rf kernel/sched_assist
           rm -rf kernel/locking/klockopt
           rm -rf drivers/soc/oplus
+          find . -type f \( -name "*Oplus*" -o -name "*OPLUS*" \) -delete
 
-          # Delete all OPLUS-related Makefiles/Kconfigs
-          find . -type f \( -name "*OPLUS*" -o -name "*klockopt*" -o -name "*rootguard*" \) -delete
-
-          # Purge from remaining files
-          find . -type f \( -name "Kconfig" -o -name "Makefile" -o -name "*.mk" \) \
-            -exec sed -i '/OPLUS_/d; /_FEATURE_/d; /rootguard/d; /klockopt/d' {} \;
+          # Fix broken Makefiles/Kconfigs
+          find . -type f \( -name "Kconfig*" -o -name "Makefile*" -o -name "*.mk" \) \
+            -exec sed -i \
+              -e '/OPLUS_/d' \
+              -e '/_FEATURE_/d' \
+              -e '/rootguard/d' \
+              -e '/sched_assist/d' \
+              -e '/klockopt/d' \
+              -e '/endif()/d' \
+              {} \;
 
       # ========================
-      # 3. Build Vanilla ARM64 Kernel
+      # 2. Build Pure ARM64 Kernel
       # ========================
-      - name: Build Generic Kernel
+      - name: Build Vanilla Kernel
         run: |
           cd kernel
           export ARCH=arm64
-          
-          # Create minimal config
-          echo "CONFIG_ARM64=y" > arch/arm64/configs/generic_defconfig
-          echo "CONFIG_SMP=y" >> arch/arm64/configs/generic_defconfig
-          echo "CONFIG_BLOCK=y" >> arch/arm64/configs/generic_defconfig
 
-          # Build with isolated output
-          make O=build clean && make O=build mrproper
+          # Create ultra-minimal config
+          cat << EOF > arch/arm64/configs/generic_defconfig
+          CONFIG_ARM64=y
+          CONFIG_SMP=y
+          CONFIG_BLOCK=y
+          CONFIG_MMU=y
+          CONFIG_SERIAL_AMBA_PL011=y
+          EOF
+
+          # Clean build environment
+          make O=build distclean
+
+          # Build with strict checks
           make O=build generic_defconfig
           make O=build -j$(nproc) 2>&1 | tee build.log
 
       # ========================
-      # 4. Validate & Upload
+      # 3. Validate & Upload
       # ========================
-      - name: Verify Artifacts
+      - name: Verify Kernel Image
         run: |
           [ -f "kernel/build/arch/arm64/boot/Image" ] || exit 1
 
