--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,29 +9,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # ========================
-      # 1. Fresh Clone + Deep Clean
+      # 1. Clone & Sanitize Source
       # ========================
-      - name: Clone and Sanitize Source
+      - name: Clone and Clean Source
         run: |
-          # Force fresh clone (no caching)
           git clone --depth=1 \
             "https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source" \
             kernel
           cd kernel
 
-          # Delete ALL OPLUS directories (critical paths)
+          # Delete OPPO/Realme proprietary directories
           rm -rf \
             arch/arm64/kernel/rootguard \
             kernel/sched_assist \
             drivers/input/touchscreen/oplus_touchscreen \
             kernel/locking/klockopt
 
-          # Nuclear removal of OPLUS references
-          find . -type \( \
+          # Fix find command syntax (critical fix)
+          find . \( \
             -name "Kconfig*" \
             -o -name "Makefile*" \
             -o -name "*.mk" \
-          \) -exec sed -i \
+          \) -type f -exec sed -i \
             -e '/OPLUS_/Id' \
             -e '/_FEATURE_/d' \
             -e '/sched_assist/d' \
@@ -40,29 +39,28 @@ jobs:
             {} \;
 
       # ========================
-      # 2. Build with Zero OPLUS Dependencies
+      # 2. Build Minimal Kernel
       # ========================
-      - name: Build Pure ARM64 Kernel
+      - name: Build Kernel
         run: |
           cd kernel
           export ARCH=arm64
 
-          # Create minimal config (verified working)
+          # Minimal validated config
           cat << EOF > arch/arm64/configs/generic_defconfig
           CONFIG_ARM64=y
           CONFIG_SMP=y
           CONFIG_BLOCK=y
           CONFIG_MMU=y
-          CONFIG_SERIAL_AMBA_PL011=y
           EOF
 
-          # Build with strict isolation
+          # Build with isolation
           make O=build distclean
           make O=build generic_defconfig
           make O=build -j$(nproc)
 
       # ========================
-      # 3. Validate & Upload
+      # 3. Upload Results
       # ========================
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
