--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,37 +9,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # ========================
-      # 1. Clone & Sanitize Source
+      # 1. Clone & Purge OPLUS
       # ========================
-      - name: Clone and Clean Source
+      - name: Clone and Sanitize
         run: |
           git clone --depth=1 \
             "https://github.com/dharani-dp-33/realme_X7max_GTneo_GTneo2T-AndroidT-kernel-source" \
             kernel
           cd kernel
 
-          # Delete OPPO/Realme proprietary directories
+          # Delete OPLUS directories/files
           rm -rf \
             arch/arm64/kernel/rootguard \
             kernel/sched_assist \
             drivers/input/touchscreen/oplus_touchscreen \
-            kernel/locking/klockopt
+            kernel/locking/klockopt \
+            OplusKernelEnvConfig.mk  # Explicitly remove problematic file
 
-          # Fix find command syntax (critical fix)
-          find . \( \
-            -name "Kconfig*" \
-            -o -name "Makefile*" \
-            -o -name "*.mk" \
-          \) -type f -exec sed -i \
-            -e '/OPLUS_/Id' \
-            -e '/_FEATURE_/d' \
-            -e '/sched_assist/d' \
-            -e '/source.*sched_assist/d' \
-            -e '/rootguard/d' \
-            {} \;
+          # Fix Makefile conditionals (critical for "extraneous endif")
+          find . -type f \( -name "Makefile*" -o -name "*.mk" \) \
+            -exec sed -i -E \
+              -e '/OPLUS_|_FEATURE_/d' \
+              -e '/ifn*eq/d; /else/d; /endif/d' \  # Remove orphaned conditionals
+              {} \;
 
       # ========================
-      # 2. Build Minimal Kernel
+      # 2. Build Pure ARM64 Kernel
       # ========================
       - name: Build Kernel
         run: |
@@ -54,17 +49,16 @@ jobs:
           CONFIG_MMU=y
           EOF
 
-          # Build with isolation
+          # Clean build with strict isolation
           make O=build distclean
           make O=build generic_defconfig
           make O=build -j$(nproc)
 
       # ========================
-      # 3. Upload Results
+      # 3. Upload Artifact
       # ========================
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: kernel-build
           path: kernel/build/arch/arm64/boot/Image*
-          if-no-files-found: error
